<resources>
    <string name="app_name" translatable="false">FootNation</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDEYH_d0EQpvyxlYvNWnsKReSY7T1enYFU</string>

    <!-- Placeholder -->
    <string name="teamname" translatable="false">Die Streetfoodballer</string>
    <string name="teamplayercount" translatable="false">Spieleranzahl: 6</string>
    <string name="teamestablishment" translatable="false">Gegründet am 12.12.2005</string>
    <string name="templatestring_long" translatable="false">""Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsumy""</string>

    <string name="msg1" translatable="false">Denn foult der gleiche Mann noch mal den Gegner regelrecht brutal, so zeigt die rote Karte diesem: Mit Recht wird er vom Feld verwiesen!</string>
    <string name="msg2" translatable="false">So mancher stürzt von ganz allein zu Boden hin und hält das Bein. Dann hilft kein Arzt und keine Salbe: Es handelt sich um eine Schwalbe!</string>
    <string name="msg3" translatable="false">Wer sich an keine Regeln hält, der fliegt zur Strafe selbst vom Feld! Denn für böse Spielvernichter gibt es einen Schiedsrichter.</string>
    <string name="msg4" translatable="false">Trifft man den Gegner ohne Ball im vollen Lauf, kommt er zu Fall. Die gelbe Karte sieht der Treter, doch rächt sich die Verwarnung später.</string>
    <string name="msg5" translatable="false">Im Fußball wie in jedem Spiel gehört ein Foul zum schlechten Stil. Doch allen geht es um die Kugel, darum entsteht auch schnell ein Rudel.</string>
    <string name="clock" translatable="false">20:37</string>

    <!-- Miscellaneous -->
    <string name="add_action" translatable="false">addButton</string>
    <string name="create">Erstellen</string>
    <string name="join">Beitreten</string>
    <string name="join_event">Event beitreten</string>
    <string name="back">Zurück</string>
    <string name="date">Datum:</string>
    <string name="time">Uhrzeit:</string>
    <string name="players_amount">Spieler-Anzahl:</string>
    <string name="your_location_is_being_searched">Deine Standort wird gesucht</string>
    <string name="please_activate_location_services">Bitte aktivieren Sie die Standortdienste.</string>
    <string name="location_services_disanled_info">Klicken Sie auf OK, um zu den Einstellungen zu gelangen. Sonst ZURÜCK.</string>
    <string name="event_saved">Event gespeichert</string>
    <string name="participant_added">Du hast dich für das Spiel angemeldet</string>
    <string name="you_are_already_a_participant">Du bist bereits für dieses Spiel angemeldet</string>
    <string name="you_can_not_join_this_game">Leider können Sie diesem Spiel nicht mehr beitreten. Die maximale Spielerzahl wurde erreicht.</string>
    <string name="create_league">Liga erstellen</string>
    <string name="search_league">Liga suchen</string>
    <string name="max_player_amount">Max. Spieler-Anzahl</string>
    <string name="event_ticker">Eventticker</string>
    <string name="single_event">Einzelned Event</string>
    <string name="chat_put_post">Post verfassen:</string>
    <string name="pick_place">Ort Auswählen</string>
    <string name="setDateAndTime">Datum und Uhrzeit</string>
    <string name="description">Beschreibung</string>
    <string name="profiledit_description">Beschreibe dich kurz</string>
    <string name="profiledit_ageday">Tag</string>
    <string name="profiledit_agemonth">Monat</string>
    <string name="profiledit_ageyear">Jahr</string>
    <string name="profiledit_residence">Dein Wohnort</string>
    <string name="profiledit">Profil bearbeiten</string>
    <string name="profileBanner">Profilbild</string>
    <string name="residence">Wohnort:</string>
    <string name="your_selected_age">Alter:</string>
    <string name="your_selected_team">Team:</string>
    <string name="n_a" translatable="false">N/A</string>
    <string name="team">Team</string>
    <string name="favorite_football_ground">Lieblings-Bolzplätze:</string>
    <string name="experience_as_player">Erfahrung als Kicker:</string>

    <!-- SetTitle(), etc. -->
    <string name="leagues">Ligen</string>
    <string name="league">Liga</string>
    <string name="home_eventradar">Events</string>
    <string name="home_searchplayer">Spieler</string>
    <string name="home_searchteam">Teams</string>
    <string name="home_search">Suche</string>
    <string name="home_profile">Dein Profil</string>
    <string name="teamtab2profile">Profil</string>
    <string name="search_teams">Teams suchen</string>
    <string name="search">Suche</string>
    <string name="news">Neuigkeiten</string>
    <string name="tabels">Tabellen</string>
    <string name="roster">Aufstellung</string>
    <string name="teamtab3teamchat">Chat</string>
    <string name="find_a_game">Finde ein Spiel</string>
    <string name="create_a_game">Erstelle ein Spiel</string>
    <string name="your_team">Dein Team</string>

    <!-- Dropdown Menu Entries -->
    <string name="settings">Einstellungen</string>
    <string name="developer">Entwickler</string>
    <string name="data_privacy">Datenschutz</string>
    <string name="impressum">Impressum</string>
    <string name="faq">FAQ</string>
    <string name="logout">Abmelden</string>

    <!-- Image Content Description -->
    <string name="football">Login Fußball Bild</string>
    <string name="editAgeImage">Alter</string>
    <string name="editPlaceImage">Wohnort</string>
    <string name="editDescritionImage">Beschreibung</string>

    <!-- Login + Register Screen -->
    <string name="not_a_member_yet">Noch kein Mitglied? Registriere dich!</string>
    <string name="registration">Registrierung</string>
    <string name="register">Registrieren</string>
    <string name="already_a_member">Bereits ein Mitglied? Loge dich ein!</string>
    <string name="login">Anmelden</string>
    <string name="enter_passwort">Passwort eingben</string>
    <string name="enter_email">E-Mail eingeben</string>
    <string name="enter_username">Nutzername eingeben</string>
    <string name="autologin" translatable="false">Auto-Login</string>
    <string name="experiences">Erfahrungen:</string>
    <string name="favourite_team">Lieblings-Team:</string>
    <string name="profile_defaultDescription">Beschreibe dich in wenigen Worten. Deine Mitspieler würden gerne mehr über dich erfahren.</string>
    <string name="profiledit_favouriteareas">Deine Lieblingsplätze</string>
    <string name="profiledit_yourexperience">Deine Erfahrungen</string>
    <string name="profiledit_yourfavouriteteam">Dein Lieblingsteam</string>
    <string name="profiledit_yourteam">Dein Team</string>

    <!-- League Table Description -->
    <string name="rank">Platz</string>
    <string name="points">Punkte</string>
    <string name="goal_difference">Tordifferenz</string>
    <string name="amount_games">Spiele</string>
    <string name="firstLeague">1. Liga</string>
    <string name="secondLeague">2. Liga</string>
    <string name="thridLeague">3. Liga</string>
    <string name="fourthLeague">4. Liga</string>

    <!-- Permission Strings -->
    <string name="permission_rationale_location">"Zugang zu "</string>
    <string name="location_permission_denied">Dein Standortdienst ist wahrscheinlich deaktiviert. Du kannst einige Funktionen nicht verwenden. Bitte aktiviere sie in den Einstellungen.</string>
    <string name="permission_required_toast">Standortdienste werden für diese Funktion benötigt</string>
    <string name="forgot_password">Passwort vergessen?</string>
    <string name="close_app">Wollen Sie die App wirklich schließen</string>
    <string name="first_name">Vorname</string>
    <string name="last_name">Nachname</string>

    <!-- ERROR Srings -->
    <string name="logig_mistake" translatable="false">    LOGIG_MISTAKE    </string>
    <string name="max_team_amount">Max. Team-Anzahl</string>
    <string name="validation_failed">Validierung fehlgeschlagen</string>
    <string name="invalid_date">invalides Datum!</string>
    <string name="invalid_year">invalides Jahr!</string>
    <string name="work_in_progress">Feature in Arbeit</string>


    <string name="profile_noProfile_text">Du scheinst noch kein Profil angelegt zu haben. Andere Spieler würden gerne sehen mit wem sie spielen werden. Klicke auf den gelben Button um dein Profil zu vervollständigen.</string>
    <string name="createleague_type">Typ:</string>
    <string name="createleague_targetgroup">Zielgruppe:</string>
    <string name="save">Speichern</string>
    <string name="colored_background">Farbiger Hintergrund</string>
    <string name="button_image">Knopf</string>

    <string-array name="createLeague_targetSpinnerValues">
        <item>offen</item>
        <item>Jugendliche</item>
        <item>junge Erwachsene</item>
        <item>Erwachsene</item>
        <item>Betriebsmannschaft</item>
        <item>Schulmannschaft</item>
    </string-array>

    <string-array name="createLeague_typeSpinnerValues">
        <item>Liga</item>
        <item>Turnier</item>
    </string-array>

</resources>
