<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity"
    android:id="@+id/toolbar_menu"
    app:actionViewClass="android.support.v7.widget.SearchView">

    <item
        android:id="@+id/action_search"
        android:title="@string/home_search"
        android:icon="@drawable/ic_search_black_72dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/home_profile"
        android:icon="@drawable/ic_person_black_72dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_developer"
        android:title="@string/developer"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_data_privacy"
        android:title="@string/data_privacy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_faq"
        android:title="@string/faq"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sign_out"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>