<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_relativeLayout"
    android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin">

    <TextView
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:id = "@+id/register_appName"
        android:text = "@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_centerHorizontal = "true"
        android:textColor = "@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textSize = "35sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_registerText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_below="@+id/register_appName"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="35sp"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_inputEmail"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textSize = "18sp"
        android:layout_below="@+id/register_registerText"
        android:focusable = "true"
        android:textColorHighlight = "@color/colorAccent"
        android:textColorHint = "@color/colorSecondaryText"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_alignParentStart = "true"
        android:layout_alignParentEnd = "true"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_inputPassword"
        android:hint="@string/enter_passwort"
        android:inputType="textPassword"
        android:textSize = "18sp"
        android:layout_below="@+id/register_inputEmail"
        android:focusable = "true"
        android:textColorHighlight = "@color/colorAccent"
        android:textColorHint = "@color/colorSecondaryText"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_alignParentStart = "true"
        android:layout_alignParentEnd = "true"
        tools:ignore="HardcodedText" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_registerBtn"
        android:text="@string/register"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/register_inputPassword"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_loginBtn"
        android:text="@string/already_a_member"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/register_registerBtn"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        tools:ignore="HardcodedText" />

</RelativeLayout>