<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileedit_coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/profileedit_coordinatorLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_green"
        android:showDividers="middle|end"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/profiledit_ageLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:showDividers="middle|end"
            android:divider="@drawable/divider_green_vertical"
            android:orientation="horizontal"
            android:weightSum="7">

            <ImageView
                android:contentDescription="@string/editAgeImage"
                android:id="@+id/profiledit_ageImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_insert_invitation_black_30dp" />

            <EditText
                android:id="@+id/profiledit_ageDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:maxLength="2"
                android:layout_weight="2"
                android:inputType="numberDecimal"
                android:hint="@string/profiledit_ageday"
                android:background="@null"
                android:focusable = "true"
                android:textColorHighlight = "@color/colorAccent"
                android:textColorHint = "@color/colorSecondaryText"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryText"/>

            <EditText
                android:id="@+id/profiledit_ageMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:maxLength="2"
                android:layout_weight="2"
                android:inputType="numberDecimal"
                android:hint="@string/profiledit_agemonth"
                android:background="@null"
                android:focusable = "true"
                android:textColorHighlight = "@color/colorAccent"
                android:textColorHint = "@color/colorSecondaryText"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryText"/>

            <EditText
                android:id="@+id/profiledit_ageYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:maxLength="4"
                android:layout_weight="2"
                android:inputType="numberDecimal"
                android:hint="@string/profiledit_ageyear"
                android:background="@null"
                android:focusable = "true"
                android:textColorHighlight = "@color/colorAccent"
                android:textColorHint = "@color/colorSecondaryText"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryText"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profiledit_residenceLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:divider="@drawable/divider_green_vertical"
            android:showDividers="middle|end"
            android:layout_marginTop="24dp"
            android:weightSum="7">

            <ImageView
                android:contentDescription="@string/editPlaceImage"
                android:id="@+id/profiledit_residenceImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_add_location_black_30dp" />

            <TextView
                android:id="@+id/profiledit_residenceText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:layout_weight="6"
                android:text="@string/profiledit_residence"
                android:background="@null"
                android:focusable = "true"
                android:textColorHighlight = "@color/colorAccent"
                android:textColorHint = "@color/colorSecondaryText"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryText"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profiledit_descriptionLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_green_vertical"
            android:showDividers="middle|end"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:weightSum="7">

            <ImageView
                android:contentDescription="@string/editDescritionImage"
                android:id="@+id/profiledit_descriptionImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_edit_black_30dp" />

            <TextView
                android:id="@+id/profiledit_descriptionText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:maxLength="128"
                android:layout_weight="6"
                android:hint="@string/profiledit_description"
                android:text=""
                android:background="@null"
                android:focusable = "true"
                android:textColorHighlight = "@color/colorAccent"
                android:textColorHint = "@color/colorSecondaryText"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryText"/>
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/profiledit_submitbtn"
        android:layout_margin="20dp"
        android:src="@drawable/ic_add_white_50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>