<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kick_it.jan.t9_mobileapp.aktivitaeten.LeagueNews">

    <ImageView
        android:contentDescription="@string/colored_background"
        android:id="@+id/backgroundimageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@raw/screen_background3"
        android:scaleType="centerCrop"/>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/newsContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:background="@drawable/border_shadow"
        android:id="@+id/newsContainer"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:clickable="true" android:focusable="true">

        <ImageView
            android:contentDescription="@string/button_image"
            android:id="@+id/banner_img2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@raw/banner_find_game"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/banner_text1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:background="@color/colorPrimaryOpacity"
            android:gravity="bottom|start"
            android:padding="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/news"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>